--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
     "interweave": "^12.5.0",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.28.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
