--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.5.0",
     "interweave": "^12.5.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-big-calendar": "^0.28.1",
     "react-bootstrap": "^1.2.2",
