--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-big-calendar": "^0.28.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^1.0.0",
